# gagne-ton-papa

./: .gitignore  Cargo.toml  README.md  agents.md  asset-manifest.json  index.html
.github/workflows/: build.yml  codspeed.yml  deploy.yml  lint.yml  pr-preview.yml  rust-build.yml  test.yml  web-lint.yml
.prs/: pagination_progressive_loading.md  performance_optimizations.md  pr-preview.md  update_agents_md.md  upgrade-web-to-vite.md
assets/: index-Drv-FV5o.js
docs/: PR_DESCRIPTION_TEMPLATE.md
lib/: Cargo.toml  README.md
lib-wasm/: Cargo.toml  README.md  index.html
lib-wasm/benchmark/: .gitignore  README.md  package-lock.json  package.json
lib-wasm/benchmark/src/: game-solver.bench.ts
lib-wasm/src/: js_models.rs  lib.rs
lib/benches/: performance_benchmark.rs
lib/src/: bitboard.rs  game_data.rs  game_resolver.rs  lib.rs  matrix_tools.rs  models.rs  svg_renderer.rs
pr-31/: asset-manifest.json  index.html  lib_wasm_bg.wasm
pr-32/: index.html
pr-32/assets/: index-Bgzqy6Tu.css  index-CioReaES.css  index-Cl2RlyHL.js  index-DKLvOIej.js
scripts/: download-model.sh  show-qr.js
src/: README.md  main.rs
static/css/: main.295ae967.css  main.295ae967.css.map  main.388f0b7a.css  main.388f0b7a.css.map  main.b8f3a69b.css.map  main.f4443ac5.css  main.f4443ac5.css.map  main.f58de397.css.map
static/js/: main.30a6dd4e.js  main.30a6dd4e.js.map  main.523fe200.js  main.523fe200.js.map  (+15 more)
web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web-test/: README.md  package-lock.json  package.json  tsconfig.json
(+77 files in other folders)
