[package]
name = "lib-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gtp-lib = { path = "../lib" }
nalgebra = "0.31.0"
wasm-bindgen = "0.2"
js-sys = "0.3.57"
