[package]
name = "lib-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
gtp-lib = { path = "../lib" }
nalgebra = "0.31.0"
wasm-bindgen = "0.2"
js-sys = "0.3.57"
