[package]
name = "gtp-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.0"
svg = "0.10.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[dev-dependencies]
criterion = "0.5"
codspeed-criterion-compat = "2.7.2"

[[bench]]
name = "performance_benchmark"
harness = false